Bugfix optimistic locking with detached entities. Refactor MealPlan create method